--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name" : "SimpleDashPlayer",
+  "name" : "SimplewebPlayer",
   "version" : "0.0.1",
   "scripts" : {
     "start" : "node server.js"
   },
   "dependencies" : {
-    "express" : "latest"
+    "express" : "latest",
+    "ejs" : "latest"
+
   }
 }
