--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name" : "SimplewebPlayer",
   "version" : "0.0.1",
   "scripts" : {
-    "start" : "node app.js"
+    "start" : "node server.js"
   },
   "dependencies" : {
     "express" : "latest",
