--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name" : "SimplewebPlayer",
+  "name" : "SummerPlayer",
   "version" : "0.0.1",
   "scripts" : {
     "start" : "node server.js"
